--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/your-payload-app
-PAYLOAD_SECRET=your-payload-secret
+DATABASE_URI=mongodb://127.0.0.1/cms-demo
+PAYLOAD_SECRET=750b7f01-f898-49bb-81a5-224e6ad1742f
